kubernetes/k8s-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: <AWS_ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/user-service:latest
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: <AWS_ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/order-service:latest
        ports:
        - containerPort: 5000
